--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+          <div class="d-flex ml-auto flex-lg-row align-items-center">
             <ul class="navbar-nav mx-auto ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item ">
                 <a class="nav-link" href="why.html"> Why Us </a>
               </li>
